// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContributorsChip > renders snapshot with more than limit > ContributorsChip - over limit 1`] = `
<div>
  <div
    class="flex items-center gap-1"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-hxgng1-MuiSvgIcon-root"
      data-testid="GroupIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5s-3 1.34-3 3 1.34 3 3 3m-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5 5 6.34 5 8s1.34 3 3 3m0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5m8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5"
      />
    </svg>
    <li
      class="MuiTypography-root MuiTypography-body1 css-pucm0b-MuiTypography-root"
    >
      A, B, C
    </li>
    <div
      class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-1tjavjc-MuiChip-root"
    >
      <span
        class="MuiChip-label MuiChip-labelMedium css-1glixai-MuiChip-label"
      >
        +2
      </span>
    </div>
  </div>
</div>
`;

exports[`ContributorsChip > renders snapshot with multiple contributors > ContributorsChip - multiple 1`] = `
<div>
  <div
    class="flex items-center gap-1"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-hxgng1-MuiSvgIcon-root"
      data-testid="GroupIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5s-3 1.34-3 3 1.34 3 3 3m-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5 5 6.34 5 8s1.34 3 3 3m0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5m8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5"
      />
    </svg>
    <li
      class="MuiTypography-root MuiTypography-body1 css-pucm0b-MuiTypography-root"
    >
      John Doe, Jane Smith
    </li>
  </div>
</div>
`;

exports[`ContributorsChip > renders snapshot with single contributor > ContributorsChip - single 1`] = `
<div>
  <div
    class="flex items-center gap-1"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-hxgng1-MuiSvgIcon-root"
      data-testid="PersonIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4m0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4"
      />
    </svg>
    <li
      class="MuiTypography-root MuiTypography-body1 css-pucm0b-MuiTypography-root"
    >
      John Doe
    </li>
  </div>
</div>
`;
